--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
     <div class="container" id="game" style="display: none;">
         <h2>Complete the Love Puzzle 💕</h2>
         <p>Arrange the pieces correctly to unlock your special message.</p>
-        <div class="puzzle-container">
-            <!-- Puzzle pieces will be dynamically generated -->
-        </div>
+        <div class="puzzle-container"></div>
         <button id="reveal-button" disabled>Reveal Surprise</button>
     </div>
 
