--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
         <button id="next-button">Continue</button>
     </div>
 
-    <div class="container" id="game" style="display: none;">
-        <h2>Complete the Love Puzzle 💕</h2>
-        <p>Arrange the pieces correctly to unlock your special message.</p>
-        <div class="puzzle-container"></div>
-        <button id="reveal-button" disabled>Reveal Surprise</button>
+    <div class="container" id="heart-display" style="display: none;">
+        <div class="sprite-heart-container"></div>
     </div>
 
     <div class="container" id="finale" style="display: none;">
