--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         <div class="sprite-heart-container"></div>
     </div>
 
+    <div class="container" id="finale" style="display: none;">
+        <h1>Will You Be My Valentine? 💘</h1>
+        <button id="yes-button">💖 Yes 💖</button>
+        <button id="no-button">💔 No 💔</button>
+    </div>
+
     <audio id="background-music" loop>
         <source src="my-valentine.mp3" type="audio/mpeg">
     </audio>
